# axis

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
axis-color/: Cargo.toml
axis-color/src/: alpha.rs  color.rs  component.rs  lib.rs  lum.rs  macros.rs  predefined.rs  rgb.rs
axis-image/: Cargo.toml
axis-image/examples/: mandelbrot.rs
axis-image/src/: bitmap.rs  generate.rs  image.rs  io.rs  lib.rs  map.rs  subimage.rs  util.rs  vec_image.rs
axis-image/src/codec/: mod.rs
axis-image/src/codec/png/: chunk.rs  compress.rs  decode.rs  encode.rs  filter.rs  interlace.rs  mod.rs  pixel.rs
axis-math/: Cargo.toml
axis-math/src/: cmp.rs  complex.rs  convert.rs  error.rs  lib.rs  num.rs  ops.rs  rect.rs  try_ops.rs  vector.rs  wrapping_ops.rs
axis-window/: Cargo.toml  build.rs
axis-window/examples/: event-debugger.rs  event_debugger.rs
axis-window/src/: client.rs  context.rs  device.rs  error.rs  event.rs  ffi.rs  lib.rs  macros.rs  pixel_format.rs  system.rs  util.rs  window.rs
axis-window/src/driver/: mod.rs
axis-window/src/driver/win32/: client.rs  context.rs  device.rs  error.rs  event.rs  ffi.rs  gdi.rs  mod.rs  pixel_format.rs  system.rs  util.rs  window.rs
axis-window/src/driver/x11/: client.rs  connection.rs  context.rs  device.rs  event.rs  mod.rs  pixel_format.rs  system.rs  window.rs
axis-window/src/ffi/: mod.rs  posix.rs  win32.rs
