[package]
name = "axis-image"
version = "1.0.0-main"
edition = "2021"
license = "MPL-2.0"

[dependencies]
axis-color = { path = "../axis-color" }
axis-math = { path = "../axis-math" }
byteorder = { version = "1.4.3", optional = true }
crc32fast = { version = "1.3.2", optional = true }
flate2 = { version = "1.0.24", optional = true }

[features]
png = ["byteorder", "crc32fast", "flate2"]

[[example]]
name = "mandelbrot"
required-features = ["png"]
