[package]
edition = "2021"
license = "MPL-2.0"
name = "axis-window"
version = "1.0.0-main"

[dependencies]
axis-math = {path = "../axis-math"}
lazy_static = {version = "1.4.0", optional = true}
libc = {version = "0.2.137", optional = true}
log = {version = "0.4.17", optional = true}

[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = [
  "errhandlingapi",
  "libloaderapi",
  "winbase",
  "wingdi",
  "winuser",
]
optional = true
version = "0.3.9"

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
x11-sys = {version = "0.1.0", features = ["x11", "x11-xcb"], optional = true}
xcb-sys = {version = "0.2.1", optional = true}

[features]
all = ["log", "x11-driver", "x11-sys", "win32-driver"]
default = ["log", "x11-driver", "win32-driver"]
win32-driver = ["lazy_static", "winapi"]
x11-driver = ["libc", "xcb-sys"]
