[package]
name = "axis-window"
version = "1.0.0-main"

edition = "2021"
license = "MPL-2.0"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
libc = { version = "0.2.142", optional = true }
log = { version = "0.4.17", optional = true }
vectorial = { path = "../../vectorial" }

[dev-dependencies]
log = "0.4.17"
simple_logger = "4.1.0"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
optional = true
features = [
    "errhandlingapi",
    "winbase",
    "winerror",
    "wingdi",
    "winuser",
]

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd"))'.dependencies.x11-sys]
version = "0.1.1"
optional = true
features = [
    "x11",
    "x11-xcb",
]

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd"))'.dependencies.xcb-sys]
version = "0.2.1"
optional = true

[features]
common-drivers = ["win32-driver", "x11-driver"]
win32-driver = ["lazy_static", "libc", "winapi"]
x11-driver = ["libc", "xcb-sys"]
